--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ continuous-threading==2.0.6
 customtkinter==5.1.2
 darkdetect==0.8.0
 future==0.18.3
+gunicorn==21.2.0
 iso8601==1.1.0
 MouseInfo==0.1.3
 numpy==1.24.2
 opencv-python==4.8.0.76
+packaging==23.2
 pandas==2.0.0
 pefile==2023.2.7
 Pillow==9.4.0
