--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 altgraph==0.17.3
+blinker==1.7.0
 certifi==2023.11.17
+click==8.1.7
 colorama==0.4.6
 continuous-threading==2.0.6
 customtkinter==5.1.2
 darkdetect==0.8.0
+Flask==3.0.0
 future==0.18.3
 gunicorn==21.2.0
+importlib-metadata==7.0.1
 iso8601==1.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
+joblib==1.3.2
+MarkupSafe==2.1.3
 MouseInfo==0.1.3
 numpy==1.24.2
 opencv-python==4.8.0.76
@@ -39,3 +47,5 @@ simple-pid==2.0.0
 six==1.16.0
 typing_extensions==4.7.1
 tzdata==2023.3
+Werkzeug==3.0.1
+zipp==3.17.0
