--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,46 @@
-altgraph==0.17.3
-blinker==1.7.0
+absl-py==2.0.0
+astunparse==1.6.3
+cachetools==5.3.2
 certifi==2023.11.17
-click==8.1.7
-colorama==0.4.6
-continuous-threading==2.0.6
-customtkinter==5.1.2
-darkdetect==0.8.0
-Flask==3.0.0
-future==0.18.3
-gunicorn==21.2.0
-importlib-metadata==7.0.1
-iso8601==1.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
+charset-normalizer==3.3.2
+flatbuffers==23.5.26
+gast==0.5.4
+google-auth==2.26.2
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+grpcio==1.60.0
+h5py==3.10.0
+idna==3.6
 joblib==1.3.2
+keras==2.15.0
+libclang==16.0.6
+Markdown==3.5.2
 MarkupSafe==2.1.3
-MouseInfo==0.1.3
-numpy==1.24.2
-opencv-python==4.8.0.76
+ml-dtypes==0.2.0
+numpy==1.26.0
+oauthlib==3.2.2
+opt-einsum==3.3.0
 packaging==23.2
-pandas==2.0.0
-pefile==2023.2.7
-Pillow==9.4.0
-psutil==5.9.4
-PyAutoGUI==0.9.53
-PyGetWindow==0.0.9
-pyinstaller==5.10.1
-pyinstaller-hooks-contrib==2023.2
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-pypng==0.20220715.0
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.2
-PyRect==0.2.0
-PyScreeze==0.1.28
-pyserial==3.5
-python-dateutil==2.8.2
-pytweening==1.0.4
-pytz==2023.3
-pywin32-ctypes==0.2.0
-PyYAML==6.0
-pyzbar==0.1.9
-qrcode==7.4.2
-simple-pid==2.0.0
+protobuf==4.23.4
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+PyAudio @ file:///C:/Users/user/Downloads/PyAudio-0.2.11-cp310-cp310-win_amd64.whl
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.3.1
+scipy==1.11.3
 six==1.16.0
-typing_extensions==4.7.1
-tzdata==2023.3
+SpeechRecognition==3.8.1
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+threadpoolctl==3.2.0
+typing_extensions==4.9.0
+urllib3==2.1.0
 Werkzeug==3.0.1
-zipp==3.17.0
+wrapt==1.14.1
