--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ google-auth==2.26.2
 google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
 grpcio==1.60.0
+gunicorn==19.7.1
 h5py==3.10.0
 idna==3.6
 joblib==1.3.2
